--- a/src/app/modules/home/components/main/main.component.html
+++ b/src/app/modules/home/components/main/main.component.html
@@ -1,41 +1,4 @@
-<div class="container">
-    <div class="row">
-      <div class="col-lg-12 text-center">
-        <div class="logo-container d-flex justify-content-center">
-          <div class="logo center-block">
-            <!-- <img src="../assets/Kahoot_Logo.svg"> -->
-            <h4 class="title">Share It!</h4>
-          </div>
-        </div>
-        <form class="form-inline form-container d-flex justify-content-center">
-          <div class="form-group inner-form-container">
-            <app-pin-form></app-pin-form>
-          </div>
-        </form>
-        <div class="button-container">
-          <div class="container">
-            <div class="row get-it-row">
-              <div class="col-sm-12">
-                <app-get-it-button></app-get-it-button>
-              </div>
-            </div>
-            <span class="or"> OR </span>
-            <div class="row share-it-row">
-              <div class="col-sm-12">
-                <app-file-input></app-file-input>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-sm-12">
-                  <app-share-it-button></app-share-it-button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <router-outlet></router-outlet>
-  
+<router-outlet></router-outlet>
+<app-footer-message></app-footer-message>
+<app-loader></app-loader>
   <!-- https://fonts.google.com/specimen/Bubblegum+Sans?selection.family=Bubblegum+Sans -->
