--- a/src/app/shared/components/get-it-button/get-it-button.component.html
+++ b/src/app/shared/components/get-it-button/get-it-button.component.html
@@ -1,1 +1,1 @@
-<button type="submit" class="button">Get It!</button>
+<button type="submit" class="button" (click)="onClick.emit($event)">Get It!</button>
