--- a/src/app/shared/components/pin-form/pin-form.component.html
+++ b/src/app/shared/components/pin-form/pin-form.component.html
@@ -1,1 +1,5 @@
-<input type="tel" class="form-control" id="pin-form">
+<input type="tel" 
+    class="form-control pin-form"
+    [ngClass]="additionalClass"
+    (keyup)="onValueChange.emit($event)"
+    placeholder="File PIN">
