--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,14 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700&display=swap');
+
 html {
     height: 100%;
 }
 body {
     min-height: 100%;
+}
+
+* {
+    font-family: 'Montserrat', sans-serif;
 }
 
 @keyframes bgcolor {
@@ -17,10 +22,6 @@ body {
 
     60% {
         background-color: #eb670f
-    }
-
-    90% {
-        background-color: #f35
     }
 
     100% {
