Fix production build

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -16,7 +16,7 @@
         <div class="container">
           <div class="row get-it-row">
             <div class="col-sm-12">
-              <app-get-it-button (onClick)="getFile($event)"></app-get-it-button>
+              <app-get-it-button (onClick)="getFile()"></app-get-it-button>
             </div>
           </div>
           <span class="or"> OR </span>
