--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -40,4 +40,7 @@
       </div>
     </div>
   </div>
+  <footer>
+    <div class="d-flex justify-content-center donate-section">Help us on <span class="patreon">	&nbsp;Patreon</span></div>
+  </footer>
 </div>
