--- a/src/app/shared/components/pin-form/pin-form.component.html
+++ b/src/app/shared/components/pin-form/pin-form.component.html
@@ -2,4 +2,4 @@
     class="form-control pin-form"
     [ngClass]="additionalClass"
     (keyup)="onValueChange.emit($event)"
-    placeholder="File PIN">
+    placeholder="File ID">
