Add patreon link

--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -41,6 +41,8 @@
     </div>
   </div>
   <footer>
-    <div class="d-flex justify-content-center donate-section">Help us on <span class="patreon">	&nbsp;Patreon</span></div>
+    <div class="d-flex justify-content-center donate-section">Help us on 
+      <a class="patreon" target="_blank" href="https://www.patreon.com/shareitworks">	&nbsp;Patreon</a>
+    </div>
   </footer>
 </div>
