--- a/src/app/modules/home/components/home/home.component.html
+++ b/src/app/modules/home/components/home/home.component.html
@@ -1,46 +1,48 @@
-<div class="container">
-  <div class="row">
-    <div class="col-lg-12 text-center">
-      <div class="logo-container d-flex justify-content-center">
-        <div class="logo center-block">
-          <!-- <img src="../assets/Kahoot_Logo.svg"> -->
-          <h4 class="title">Share It!</h4>
-        </div>
-      </div>
-      <form class="form-inline form-container d-flex justify-content-center">
-        <div class="form-group inner-form-container">
-          <app-pin-form (onValueChange)="pin = $event.target.value"></app-pin-form>
-        </div>
-      </form>
-      <div class="button-container">
-        <div class="container">
-          <div class="row get-it-row">
-            <div class="col-sm-12">
-              <app-get-it-button (onClick)="getFile()"></app-get-it-button>
-            </div>
+<div class="home-container">
+  <div class="d-flex align-items-center justify-content-center container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <div class="logo-container d-flex justify-content-center">
+          <div class="logo center-block">
+            <!-- <img src="../assets/Kahoot_Logo.svg"> -->
+            <h4 class="title">Share It!</h4>
           </div>
-          <span class="or"> OR </span>
-          <div class="row share-it-row">
-            <div class="col-sm-12">
-              <app-file-input
-                (onFileSelect)="file = $event"
-                [label]="file_label"></app-file-input>
-            </div>
+        </div>
+        <form class="form-inline form-container d-flex justify-content-center">
+          <div class="form-group inner-form-container">
+            <app-pin-form (onValueChange)="pin = $event.target.value"></app-pin-form>
           </div>
-          <div class="row">
-            <div class="col-sm-12">
-                <app-share-it-button
-                  (onClick)="upload()"
-                  [disabled]="file ? 'false' : 'true'"
-                  >
-                </app-share-it-button>
+        </form>
+        <div class="button-container">
+          <div class="container">
+            <div class="row get-it-row">
+              <div class="col-sm-12">
+                <app-get-it-button (onClick)="getFile()"></app-get-it-button>
+              </div>
+            </div>
+            <span class="or"> OR </span>
+            <div class="row share-it-row">
+              <div class="col-sm-12">
+                <app-file-input
+                  (onFileSelect)="file = $event"
+                  [label]="file_label"></app-file-input>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                  <app-share-it-button
+                    (onClick)="upload()"
+                    [disabled]="file ? 'false' : 'true'"
+                    >
+                  </app-share-it-button>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-  <footer>
+  <footer class="footer">
     <div class="d-flex justify-content-center donate-section">Help us on 
       <a class="patreon" target="_blank" href="https://www.patreon.com/shareitworks">	&nbsp;Patreon</a>
     </div>
