Change pin form type

--- a/src/app/shared/components/pin-form/pin-form.component.html
+++ b/src/app/shared/components/pin-form/pin-form.component.html
@@ -1,4 +1,4 @@
-<input type="tel" 
+<input
     class="form-control pin-form"
     [ngClass]="additionalClass"
     (keyup)="onValueChange.emit($event)"
